--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Articles</title>
     <link rel="stylesheet" href="./page.css">
     <script src="./page.js"></script>
 </head>
@@ -13,8 +13,7 @@
     <h1 class="header">Hello</h1>
 
     <div id="container"></div>
-
-    <script src="./page.js"></script>
+    <a href="http://"></a>
 </body>
 
 </html>
